1-slider: finished 1-slider

--- a/1-slider/index.html
+++ b/1-slider/index.html
@@ -10,7 +10,19 @@
 </head>
 
 <body>
-
+    <div class="slider">
+        <button type="button" class="slider__button slider__button_pos_left">V</button>
+        <div class="slider__container">
+            <div class="slider__stripe"></div>
+        </div>
+        <button type="button" class="slider__button slider__button_pos_right">V</button>
+    </div>
+    <p class="readme">
+        Реализовал простой слайдер. Размеры слайда адаптируются под ширину экрана.
+        По умолчанию начинается самостоятельная прокрутка слайдов.
+        При наведении курсора на область слайдера самостоятельная прокрутка приостанавливается.
+        Работают кнопки принудительной прокрутки слайдов.
+    </p>
 </body>
 
 </html>
