final-work: made some improvements

--- a/1-slider/index.html
+++ b/1-slider/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1 class="page-heading">Слайдер</h1>    
     <div class="slider">
         <button type="button" class="slider__button slider__button_pos_left">V</button>
         <div class="slider__container">
