--- a/2-animation/index.html
+++ b/2-animation/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1 class="page-heading">Анимации</h1>
     <button type="button" class="start-button">Начать анимацию</button>
     <div class="figures">
         <div class="figures__figure-container">
