--- a/3-video/index.html
+++ b/3-video/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1 class="page-heading">Видео</h1>
     <div class="video">
         <video class="video__window">
             <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.webm" type="video/webm">
