--- a/7-squares/index.html
+++ b/7-squares/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1 class="page-heading">Random squares amount</h1>
+    <h1 class="page-heading">Разноцветные квадратики</h1>
     <div class="button">
         Нажмите для отображения случайного количества (от 10 до 100) квадратиков
     </div>
