final-work: corrected 4-task heading

--- a/4-json/index.html
+++ b/4-json/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1 class="page-heading">Данные из https://reqres.in/api/users</h1>
+    <h1 class="page-heading">Работа с HTTP запросами</h1>
     <nav class="navigation">
         Выберите страницу
     </nav>
